# Salad

./: .env.sample  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.sample  Cargo.toml  Dockerfile
backend/docs/src/: lib.rs
backend/migrations/: 00001_users_table copy.sql  00001_users_table.sql
backend/migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
backend/src/: db.rs  funcs.rs  helpers.rs  lib.rs  main.rs  models.rs  response.rs  routes.rs  schema.rs
backend/src/buckets/: config.rs  file.rs
backend/src/connectors/buckets/: file.rs
backend/src/connectors/db/: connection.rs  follow.rs  image.rs  insight.rs  link.rs  mod.rs  notifications.rs  reset.rs  user.rs
backend/src/connectors/smtp/: email.rs  email_service.rs  mod.rs  smtp_service.rs
backend/src/db/: image.rs  link.rs  user.rs
backend/src/helpers/: auth.rs  errors.rs  funcs.rs  links.rs  mod.rs  notifications.rs  params.rs  random.rs  response.rs  state.rs  validation.rs
backend/src/models/: follows.rs  images.rs  insights.rs  links.rs  mod.rs  notifications.rs  reset.rs  users.rs
backend/src/response/: error.rs  response.rs
backend/src/routes/: auth.rs  links_controller.rs  profile_controller.rs
backend/src/routes/auth/: login.rs  logout.rs  mod.rs  register.rs  reset_password.rs
backend/src/routes/follow/: create.rs  delete.rs  get.rs  update.rs
backend/src/tests/: email.rs  follow.rs  insight.rs  link.rs  mod.rs  password_reset.rs  testing.rs
backend/src/types/: error.rs  mod.rs  pagination.rs  response.rs  state.rs
docs/: deployment.md  (+1 more)
(+118 files in other folders)
