[package]
name = "time_gen"
version = "0.1.0"
edition = "2021"

[dependencies]
tide = "0.16.0"
async-std = { version = "1.12.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
scrypt = { version = "0.11.0", default-features = true }
sqlx = { version = "0.7.4", features = ["postgres", "runtime-async-std"] }
dotenv = "0.15.0"
diesel = { version = "2.1.0", features = ["postgres"] }
dotenvy = "0.15"
http-types = "2.12.0"
validator = { version = "0.16", features = ["derive"] }
femme = "2.2.1"
log = "0.4.21"
diesel_migrations = { version = "2.2.0", features = ["postgres"] }
