[package]
name = "time_gen"
version = "0.1.0"
edition = "2021"

[dependencies]
tide = "0.16.0"
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "2.1.0", features = ["postgres","r2d2"] }
dotenvy = "0.15"
http-types = "2.12.0"
validator = { version = "0.16", features = ["derive"] }
femme = "2.2.1"
log = "0.4.21"
diesel_migrations = { version = "2.2.0", features = ["postgres"] }
sha256 = "1.5.0"
bcrypt = "0.15.1"
once_cell = "1.19.0"
fancy-regex = "0.13.0"
tokio = { version = "1", features = ["full"] }
aws-sdk-s3 = "1.37.0"
aws-config = "1.5.2"
bytes = "1.6.0"
random-string = "1.1.0"
